fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ h1 {
 
 h2 {
   font-size: 30px;
-  padding: 20px 0px;
+  padding: 20px 0px 60px;
 }
 
 h3 {
@@ -57,7 +57,7 @@ h3 {
 
 p {
   font-size: 15px;
-  padding: 10px 20px 20px 0px;
+  padding: 0px 60px 20px 0px;
   letter-spacing: 1.2px;
   font-family: 'Roboto', sans-serif;
 }
@@ -78,7 +78,7 @@ i {
 .font-size {
   display: block;
   font-size: 20px;
-  padding-top: 30px;
+  padding: 30px 0px 15px;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -112,7 +112,7 @@ i {
 }
 
 .placeholder {
-  visibility: hidden;
+  width: 1000px;
 }
 
 .github-link {
@@ -127,13 +127,13 @@ i {
   padding-top: 54px;
 }
 
-.move-up {
+/* .move-up {
   padding: 20px 0px 0px;
-}
+} */
 
-.change-top-pad {
+/* .change-top-pad {
   padding: 0px 20px 20px 0px;
-}
+} */
 
 .make-bold {
   font-weight: 600;
@@ -177,6 +177,10 @@ i {
 
 .pad-all-tech {
   padding: 10px 30px;
+}
+
+.about-p {
+  padding-bottom: 20px;
 }
 
 @media only screen and (max-width: 480px) {
